Fixing vertical overflow problem on the body element

--- a/public/main.css
+++ b/public/main.css
@@ -4,6 +4,7 @@ div {
 
 body {
   font-family: Raleway, sans-serif;
+  overflow-x: hidden;
 }
 
 h2 {
@@ -74,6 +75,7 @@ main {
 
   min-height: 87vh;
 }
+
 #leftSidebar {
   order: 1;
   flex: 1;
